--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $active-blue-dark: #4779F2;
 $heading-bg-blue: #357ebd;
 $heading-border-blue: #428bca;
 $onboarding-bg-blue: rgba(27, 18, 77, .85);
+$onboarding-btn-blue: #5bc0de;
 $progress-green: #5cb85c;
 
 // Sizes:
