--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,9 +3,11 @@
 
 @import 'variables';
 @import 'global';
+@import 'forms';
 @import 'header';
 @import 'onboarding';
 @import 'school';
 @import 'reminder';
+@import 'sms';
 @import 'footer';
 @import 'components';
