--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $heading-border-blue: #428bca;
 $onboarding-bg-blue: rgba(27, 18, 77, .85);
 $onboarding-btn-blue: #5bc0de;
 $progress-green: #5cb85c;
+$danger: #d43f3a;
 
 // Sizes:
 $footer-height: 80px;
