--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,6 @@
 @import 'onboarding';
 @import 'school';
 @import 'reminder';
-@import 'sms';
+@import 'user';
 @import 'footer';
 @import 'components';
