--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -14,6 +14,12 @@
     height: 75vh;
   }
 
+  .skip-to-login {
+    color: white;
+    font-size: 1.5em;
+    margin-top: 3em;
+  }
+
   i.fa {
     font-size: 50px;
   }
