Adds forgot login flow

--- a/src/styles/_user.scss
+++ b/src/styles/_user.scss
@@ -62,4 +62,13 @@ main.login-view {
   .btn {
     margin-top: 1em;
   }
+
+  .forgot-login-link {
+    a {
+      color: white;
+    }
+
+    margin-top: 1em;
+    font-size: 1em;
+  }
 }
