--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,11 +1,11 @@
 header {
-  height: 90px;
 
   .panel {
     margin-left: -12px;
     margin-right: -12px;
     margin-top: 3px;
     margin-bottom: 3px;
+    height: 90px;
   }
 
   h1 {
@@ -14,7 +14,8 @@ header {
   }
 
   img {
-    width: 100%;
+    width: auto;
+    max-height: 70px;
     display: block;
     margin: 5px auto 0 auto;
   }
