Add cancel button and style for /schools/new page.

--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -38,6 +38,10 @@
     margin-bottom: 0;
   }
 
+  .btn-cancel {
+      margin-top: 1em;
+  }
+
   .progress {
     margin: 0 auto;
     width: 70%;
