Add a 'force' argument to the rewindOb call from buttons, and use the angular if directive to selectively display the options.

--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -11,7 +11,11 @@
   color: white;
 
   .ob-main {
-    height: 75vh;
+    height: 55vh;
+  }
+
+  .ob-nav {
+      height: 15vh;
   }
 
   .skip-to-login {
