Adds single date reminder view

--- a/src/styles/_reminder.scss
+++ b/src/styles/_reminder.scss
@@ -43,7 +43,7 @@ main.reminder-view {
     font-weight: bold;
   }
 
-  .school-header {
+  .reminder-list-header {
     border: 1px solid white;
     background-color: white;
     border-radius: 5px;
@@ -61,7 +61,7 @@ main.reminder-view {
     }
   }
   
-  .school-name {
+  .reminder-list-title {
     margin: 0;
     font-weight: bold;
     font-size: 2em;
