fix(onboarding): tighten up styles for small monitors #79

--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -34,6 +34,13 @@
     margin: 50px 0;
   }
 
+  @media (max-height: 600px) {
+    padding-top: 1vh;
+    p {
+      margin: 10px 0;
+    }
+  }
+
   .info-text {
     font-family: $pt-sans;
     font-size: 1em;
