--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,3 +16,7 @@ $footer-height: 80px;
 $marvel: 'Marvel', sans-serif;
 $francois-one: 'Francois One', sans-serif;
 $pt-sans: 'PT Sans Narrow', sans-serif;
+
+// Responsive controls:
+$resizeL1: "max-height: 600px"; // iPhone5 fits in this
+$resizeL2: "max-height: 700px"; // iPhone6 fits in this
