--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -10,12 +10,23 @@
   padding-top: 10vh;
   color: white;
 
-  .ob-main {
-    height: 55vh;
-  }
+  @media ($aboveMin) {
+    .ob-main {
+      height: 50vh;
 
-  .ob-nav {
+      .login-btn {
+        margin-top: 15px;
+      }
+    }
+
+    .ob-nav {
       height: 15vh;
+    }
+
+    .intro-divider {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
   }
 
   .skip-to-login {
@@ -47,6 +58,10 @@
     font-style: italic;
     margin-top: 0.5em;
     margin-bottom: 0;
+  }
+
+  .ob-progress {
+    margin-top: 15px;
   }
 
   .progress {
