--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,3 +20,4 @@ $pt-sans: 'PT Sans Narrow', sans-serif;
 // Responsive controls:
 $resizeL1: "max-height: 600px"; // iPhone5 fits in this
 $resizeL2: "max-height: 700px"; // iPhone6 fits in this
+$aboveMin: "min-height: 600px";
