--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -7,57 +7,67 @@
   background-color: $onboarding-bg-blue;
   z-index: 90;
   text-align: center;
-  padding-top: 10vh;
+  padding: 0;
   color: white;
 
-  @media ($aboveMin) {
-    .ob-main {
-      height: 50vh;
+  .ob-main, .ob {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-      .login-btn {
-        margin-top: 15px;
-      }
-    }
+  .ob-main {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  }
 
-    .ob-nav {
-      height: 15vh;
-    }
+  .ob {
+    width: 100%;
+    height: 100%;
+    max-height: 500px;
+    max-width: 500px;
+    padding: 20px;
+    justify-content: space-around;
+    overflow: auto;
+    // outline: 1px solid red;
+  }
 
-    .intro-divider {
-      padding-top: 15px;
-      padding-bottom: 15px;
+  .btn {
+    flex-shrink: 0;
+  }
+
+  .btn-container {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    
+    .btn {
+    margin: 0 20px
     }
   }
 
-  .skip-to-login {
-    color: white;
-    font-size: 1.5em;
-    margin-top: 3em;
+  .disclaimer {
+    margin-bottom: 1em;
   }
+
 
   i.fa {
     font-size: 50px;
   }
 
-  p {
+  h2, p {
     font-family: $marvel;
     font-size: 36px;
-    margin: 50px 0;
-  }
-
-  @media ($resizeL2) {
-    padding-top: 1vh;
-    p {
-      margin: 5px 0;
-    }
+    margin: 0 0 .5em;
   }
 
   .info-text {
     font-family: $pt-sans;
     font-size: 1em;
     font-style: italic;
-    margin-top: 0.5em;
-    margin-bottom: 0;
   }
 
   .input-group {
@@ -79,36 +89,37 @@
 
   .btn-onboarding-desktop {
     display: inline-block;
+  }
 
-    &+.btn-onboarding-desktop {
-      margin-left: 1em;
+  .ob4, .ob5 {
+    justify-content: center;
+
+  }
+
+  .ob5 {
+    p {
+      margin-bottom: 1em;
     }
   }
-}
 
-.ob3, .ob4 {
-  p {
-    margin-top: 0;
-  }
-}
+  .ob7 {
+    p {
+      font-size: 1.5em;
+    }
 
-.ob7 {
-  p {
-    font-size: 28px;
-  }
+    ul {
+      list-style: none;
+      padding: 0;
+      line-height: 3;
+      width: 300px;
+      text-align: left;
+      margin: 0 auto;
+    }
 
-  ul {
-    list-style: none;
-    padding: 0;
-    line-height: 3;
-    width: 300px;
-    text-align: left;
-    margin: 0 auto;
-  }
-
-  i.fa {
-    font-size: 32px;
-    margin-right: 15px;
-    width: 28px;
+    i.fa {
+      font-size: 32px;
+      margin-right: 15px;
+      width: 28px;
+    }
   }
 }
