147 Fixes CSS on login form. Removes swipe actions from onboarding

--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -31,7 +31,10 @@
     padding: 20px;
     justify-content: space-around;
     overflow: auto;
-    // outline: 1px solid red;
+
+    @media (max-height: 500px) { 
+      justify-content: flex-start;
+    }
   }
 
   .btn {
