147 Uses SCSS variable for onboarding height/width

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,8 @@ $danger: #d43f3a;
 
 // Sizes:
 $footer-height: 80px;
+$onboarding-height: 500px;
+$onboarding-width: 500px;
 
 // Fonts:
 $marvel: 'Marvel', sans-serif;
