--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -26,13 +26,13 @@
   .ob {
     width: 100%;
     height: 100%;
-    max-height: 500px;
-    max-width: 500px;
+    max-height: $onboarding-height;
+    max-width: $onboarding-width;
     padding: 20px;
     justify-content: space-around;
     overflow: auto;
 
-    @media (max-height: 500px) { 
+    @media (max-height: $onboarding-height) { 
       justify-content: flex-start;
     }
   }
