--- a/src/styles/_onboarding.scss
+++ b/src/styles/_onboarding.scss
@@ -113,16 +113,30 @@
     ul {
       list-style: none;
       padding: 0;
-      line-height: 3;
+      line-height: 2;
       width: 300px;
-      text-align: left;
-      margin: 0 auto;
+      text-align: center;
+      margin: 0 0 0 -18px;
+      font-size: 1em;
     }
 
     i.fa {
-      font-size: 32px;
-      margin-right: 15px;
-      width: 28px;
+      font-size: 24px;
+      margin-right: 10px;
+      width: 21px;
+    }
+
+    .small {
+      font-size: 1em;
+    }
+
+    .big {
+      font-size: 2em;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
